fix: Refactor and fix Main Page layout issues. > 1. Add icons for books and cosmetics product page. > 2. Hide Cosmetics section. > 3. Change Product list component layout. > 4. Add % for a product price element. > 5. Add a cursor pointer for radio buttons.

--- a/src/app/features/main-page/components/home/home.component.scss
+++ b/src/app/features/main-page/components/home/home.component.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 1px solid black;
 
   &__hero {
     display: flex;
@@ -13,7 +12,7 @@
     justify-content: center;
     align-items: center;
     padding: 2rem 0;
-    
+
     @include media-tablet {
       display: block;
     }
