--- a/src/app/features/product/product-list/product-list.component.scss
+++ b/src/app/features/product/product-list/product-list.component.scss
@@ -9,9 +9,11 @@
     flex-direction: column;
   }
 }
-.product-list__wrapper{
+
+.product-list__wrapper {
   display: flex;
-  column-gap: 3rem;
+  flex-direction: column;
+  gap: 3rem;
   padding: 2rem 1.5rem;
 
   @include media-laptop-tablet {
@@ -22,10 +24,12 @@
     flex-direction: column;
   }
 }
-.product-list__wrapper{
+
+.product-list__wrapper {
   display: flex;
   column-gap: 3rem;
   padding: 2rem 1.5rem;
+  min-height: calc(100vh - 80px);
 
   @include media-laptop-tablet {
     column-gap: 1.5rem;
@@ -33,6 +37,54 @@
 
   @include media-mobile-big {
     flex-direction: column;
+  }
+}
+
+/* header */
+.product-list {
+  &__container {
+    display: flex;
+    flex-wrap: nowrap;
+
+    aside {
+      height: fit-content;
+    }
+  }
+}
+
+.product-page__header {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: #999999;
+  font-size: 1.5rem;
+
+  a {
+    text-decoration: none;
+    color: #b7b7b7;
+    font-size: 1.5rem;
+
+    &:hover {
+      color: $color-additional;
+    }
+  }
+
+  &__icon-books {
+    width: 24px;
+    height: 24px;
+    background-image: url('../../../assets/icons/menu_book_24dp.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+  }
+
+  &__icon-cosmetics {
+    width: 24px;
+    height: 24px;
+    background-image: url('../../../assets/icons/spa_24dp.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
   }
 }
 
@@ -41,7 +93,6 @@ aside {
   width: 29rem;
   border-radius: 1rem;
   border: 2px solid $color-input-search;
-  box-shadow: 0 3px 9px 5px $color-input-search;
 
   h2,
   h3 {
@@ -71,9 +122,9 @@ aside {
     h3 {
       font-size: 1.2rem;
     }
-   }
+  }
 
-   @include media-mobile-big {
+  @include media-mobile-big {
     width: 97%;
     margin: 0.5rem;
     padding: 1rem;
@@ -132,6 +183,7 @@ li {
 }
 
 .product-list {
+  width: 70vw;
   display: flex;
   row-gap: 2rem;
   column-gap: 2rem;
@@ -142,8 +194,19 @@ li {
   @include media-laptop-tablet {
     column-gap: 1.5rem;
   }
-  
+
   @include media-tablet {
     column-gap: 1rem;
+  }
+}
+
+/* To remove default text */
+.default {
+  p {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 }
